--- a/README.Rmd
+++ b/README.Rmd
@@ -1,48 +1,71 @@
 ---
-title: "HW1_433"
+title: "HW2"
 author: "Georgia Warren"
-date: "9/23/2021"
-output: github_document
+date: "9/25/2021"
+output: html_document
 ---
 
-Link to github: https://github.com/gewarrren/gewarrren.git
+# Question 1  
+
+How many flights have a missing `dep_time`? What other variables are missing? What might these rows represent?  
 
 ```{r}
-library("tidyverse")
-library("readr")
-library("ggplot2")
+library(nycflights13)
+library(dplyr)
+library(ggplot2)
 
-bridges <- read_delim("Bridges.txt")
+# Counting flights by missing `dep_time`
+flights %>% 
+  filter(is.na(dep_time)) %>% 
+  summarise(mising_dep_time = n())
 
-# Preview Raw Data
-head(bridges)
-str(bridges)
+# Checking which variables contain NAs
+summary(flights)  
 
-# Select Variables to View
-new_bridges = data.frame(bridge_ID = bridges$STRUCTURE_NUMBER_008, year = bridges$YEAR_BUILT_027, fips_codes =  bridges$STATE_CODE_001, conditions_rating = bridges$BRIDGE_CONDITION, lanes_on_structure = bridges$TRAFFIC_LANES_ON_028A, bridge_roadway_width = bridges$ROADWAY_WIDTH_MT_051)
-
-# Creating a file with the filtered variables
-write.csv(new_bridges, file = "new_bridges.csv")
-
-## Data Descriptions:
-  ## bridge_ID: ID given to each bridge. 
-  ## year: Year the structure was built (xxxx).
-  ## fips_codes: Code ID given to each state.
-  ## conditions_rating: S meaning Structurally Deficient , F meaning Functionally Obsolete 
-  ## lanes_on_structure: Number of lanes on the structure. 
-  ## bridge_roadway_width: Width (meters) of bridge from curb to curb (xxx.x).
-
-#Preview Data
-head(new_bridges)
-str(new_bridges)
-
-#Plot
-ggplot(data = new_bridges) + 
-  geom_point(mapping = aes(x = lanes_on_structure, y = bridge_roadway_width)) +
-    coord_cartesian(xlim=c(0, 25)) + 
-  ggtitle("Number of Lanes vs. Width of Structure") +
-  xlab("Number of Lanes on Structure") +
-  ylab("Width of Structure from Curb to Curb (meters)") 
-
-
+# Flights by missing `dep_time` in which other variables are also missing
+flights %>% 
+  filter(is.na(dep_time)) %>%
+  select(dep_time, dep_delay, arr_time, arr_delay, air_time)
 ```
+
+These rows might represent flights that have been canceled. 
+
+  
+# Question 2  
+  
+Currently `dep_time` and `sched_dep_time` are convenient to look at, but hard to compute with because they’re not really continuous numbers. Convert them to a more convenient representation of number of minutes since midnight.
+```{r}
+flights %>% 
+  mutate(dep_time_min = dep_time %/% 100 * 60 + dep_time %% 100,
+         sched_dep_time_min = sched_dep_time %/% 100 * 60 + sched_dep_time %% 100) %>% 
+  select(dep_time_min, sched_dep_time_min)
+```
+
+# Question 3  
+  
+Look at the number of canceled flights per day. Is there a pattern? Is the proportion of canceled flights related to the average delay? Use multiple dyplr operations, all on one line, concluding with `ggplot(aes(x= ,y=)) + geom_point()`.
+
+```{r}
+flights %>% 
+  group_by(year, month, day) %>% 
+  summarise(cancelled_per_day = sum(),
+            n = n(),
+            mean_dep_delay = mean(dep_delay,na.rm=TRUE),
+            mean_arr_delay = mean(arr_delay,na.rm=TRUE)) %>% 
+  ggplot(aes(x = cancelled_per_day, y = avg_delay)) + geom_point()
+
+
+
+flights %>%
+  mutate(dep_date = lubridate::make_datetime(year, month, day)) %>%
+  group_by(dep_date) %>%
+  summarise(cancelled = sum(is.na(dep_delay)), 
+            n = n()),
+            mean_dep_delay = mean(dep_delay,na.rm=TRUE),
+            mean_arr_delay = mean(arr_delay,na.rm=TRUE)) %>%
+    ggplot(aes(x= cancelled/n)) + 
+    geom_point(aes(y=mean_dep_delay), colour='blue', alpha=0.5) + 
+    geom_point(aes(y=mean_arr_delay), colour='red', alpha=0.5) + 
+    ylab('mean delay (minutes)')
+```
+
