--- a/README.Rmd
+++ b/README.Rmd
@@ -5,6 +5,8 @@ date: "9/25/2021"
 output: html_document
 ---
 
+Link to github: https://github.com/gewarrren/gewarrren.git
+
 # Question 1  
 
 How many flights have a missing `dep_time`? What other variables are missing? What might these rows represent?  
@@ -13,6 +15,7 @@ How many flights have a missing `dep_time`? What other variables are missing? Wh
 library(nycflights13)
 library(dplyr)
 library(ggplot2)
+library(lubridate)
 
 # Counting flights by missing `dep_time`
 flights %>% 
@@ -36,8 +39,8 @@ These rows might represent flights that have been canceled.
 Currently `dep_time` and `sched_dep_time` are convenient to look at, but hard to compute with because they’re not really continuous numbers. Convert them to a more convenient representation of number of minutes since midnight.
 ```{r}
 flights %>% 
-  mutate(dep_time_min = dep_time %/% 100 * 60 + dep_time %% 100,
-         sched_dep_time_min = sched_dep_time %/% 100 * 60 + sched_dep_time %% 100) %>% 
+  mutate(dep_time_min = (dep_time %/% 100) * 60 + (dep_time %% 100),
+         sched_dep_time_min = (sched_dep_time %/% 100) * 60 + (sched_dep_time %% 100)) %>% 
   select(dep_time_min, sched_dep_time_min)
 ```
 
@@ -46,26 +49,21 @@ flights %>%
 Look at the number of canceled flights per day. Is there a pattern? Is the proportion of canceled flights related to the average delay? Use multiple dyplr operations, all on one line, concluding with `ggplot(aes(x= ,y=)) + geom_point()`.
 
 ```{r}
-flights %>% 
-  group_by(year, month, day) %>% 
-  summarise(cancelled_per_day = sum(),
-            n = n(),
-            mean_dep_delay = mean(dep_delay,na.rm=TRUE),
-            mean_arr_delay = mean(arr_delay,na.rm=TRUE)) %>% 
-  ggplot(aes(x = cancelled_per_day, y = avg_delay)) + geom_point()
-
-
 
 flights %>%
-  mutate(dep_date = lubridate::make_datetime(year, month, day)) %>%
-  group_by(dep_date) %>%
-  summarise(cancelled = sum(is.na(dep_delay)), 
-            n = n()),
-            mean_dep_delay = mean(dep_delay,na.rm=TRUE),
-            mean_arr_delay = mean(arr_delay,na.rm=TRUE)) %>%
-    ggplot(aes(x= cancelled/n)) + 
-    geom_point(aes(y=mean_dep_delay), colour='blue', alpha=0.5) + 
-    geom_point(aes(y=mean_arr_delay), colour='red', alpha=0.5) + 
-    ylab('mean delay (minutes)')
+  mutate(dep_day = make_datetime(year, month, day))  %>%
+  group_by(dep_day) %>%
+  summarise(canceled = sum(is.na(dep_delay)), 
+            count = n(),
+            mean_dep_delay = mean(dep_delay, na.rm=TRUE),
+            mean_arr_delay = mean(arr_delay, na.rm=TRUE)) %>%
+  ggplot(aes(x = canceled/count)) +
+           geom_point(aes(y=mean_dep_delay, color = "dep_delay"), alpha =0.35) + 
+           geom_point(aes(y=mean_arr_delay, color = "arr_delay"), alpha =0.35) +
+           xlab('canceled flights per day') +
+           ylab('mean delay (minutes)')
+
 ```
+  
+Most of the canceled flights remain around 0 for a range of delay times, besides a few exceptions.  
 
